# high_performance_computing

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: lora_default.yaml  megatron_demo.yaml  zero2_offload.json  zero3.json
data/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: REFERENCES.md
notebooks/: week1_hpc_foundations_profiling.ipynb  week2_pytorch_optimization_cuda.ipynb  week3_flashattention_vllm.ipynb  week4_zero_fsdp_distributed.ipynb  week5_3d_parallelism_megatron.ipynb  week6_lora_qlora_quantization.ipynb
scripts/: bench_matmul.py  train_deepspeed.py  train_fsdp.py  train_qlora.py
scripts/slurm/: inference_vllm.sh  multi_node.sh  single_node.sh
src/: __init__.py
src/cuda/: __init__.py  matmul.py
src/distributed/: __init__.py  fsdp_utils.py  parallel_layers.py
src/inference/: __init__.py  kv_cache.py
src/utils/: __init__.py  memory.py  profiling.py
tests/: conftest.py  test_kv_cache.py  test_lora.py  test_memory_breakdown.py  test_parallel_layers.py
